--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -1,3 +1,3 @@
-bitcoin: https://api.nomics.com/v1/currencies/ticker?key=demo-b5d84e505a11969a7184f899fbb40ae1&ids=BTC
-ethereum: https://api.nomics.com/v1/currencies/ticker?key=demo-b5d84e505a11969a7184f899fbb40ae1&ids=ETH
-ripple: https://api.nomics.com/v1/currencies/ticker?key=demo-b5d84e505a11969a7184f899fbb40ae1&ids=XRP
+bitcoin: https://cex.io/api/last_price/BTC/USD
+ethereum: https://cex.io/api/last_price/ETH/USD
+ripple: https://cex.io/api/last_price/XRP/USD
